application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: localhpatest
  labels:
    component: localhpatest
spec:
  ports:
  - name: api
    port: 8080
  selector:
    component: localhpatest
